--- a/single_offer/Cargo.toml
+++ b/single_offer/Cargo.toml
@@ -1,10 +1,28 @@
 [package]
-name = "single_offer"
-version = "0.1.0"
+name = "soroban-single-offer-contract"
+version = "0.0.0"
 edition = "2021"
-
-[dependencies]
-soroban-sdk = { version = "20.0.0", features = ["testutils"] }
+publish = false
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
+
+[dependencies]
+soroban-sdk = { version = "22.0.1" }
+
+[dev-dependencies]
+soroban-sdk = { version = "22.0.1", features = ["testutils"] }
+
+[profile.release]
+opt-level = "z"
+overflow-checks = true
+debug = 0
+strip = "symbols"
+debug-assertions = false
+panic = "abort"
+codegen-units = 1
+lto = true
+
+[profile.release-with-logs]
+inherits = "release"
+debug-assertions = true
